# ImGUITemplate

./: CMakeLists.txt
.cache/clangd/index/: context.c.3E7A2C4756B7386A.idx  egl_context.c.C160D25CF7CD9645.idx  emptyInitial.h.2EE9ADB351669DC2.idx  glfw3.h.D832A8B50042F5D6.idx  glfw3native.h.5B0ACCC3942B053F.idx  glx_context.c.8C3CBA0DA4974A13.idx  imconfig.h.766974EEFA12225F.idx  imconfig.h.7D26C5A2034CF9B8.idx  imgui.cpp.65BD0D4775F0E147.idx  imgui.cpp.F02931C55C616F06.idx  imgui.h.74D13939B10941F8.idx  imgui.h.9D77C8D5EFEC40FF.idx  imgui_demo.cpp.5C9EBE8BDDF1755B.idx  imgui_demo.cpp.69064C6895CEAF9B.idx  imgui_draw.cpp.4060549872CFB72C.idx  imgui_draw.cpp.8AAAC2BB5E5C3529.idx  imgui_impl_glfw.cpp.6EB1777C28B3DBF9.idx  imgui_impl_glfw.h.1973CB2894DD813B.idx  imgui_impl_opengl3.cpp.800D20B3E96E1306.idx  imgui_impl_opengl3.h.D699E5947CAC03EB.idx  imgui_impl_opengl3_loader.h.8BB25B48BF1037F4.idx  imgui_internal.h.55E9171DE8DBDC9A.idx  imgui_internal.h.F05DC9A1441AE554.idx  imgui_tables.cpp.750488F2B9B088E5.idx  imgui_tables.cpp.C14CF5C017302A63.idx  imgui_widgets.cpp.4FFBE8EC7CD492BF.idx  imgui_widgets.cpp.56F426A67EB90B64.idx  imstb_rectpack.h.1C554E7CA703F2AE.idx  imstb_rectpack.h.ECA6472990DA6D20.idx  imstb_textedit.h.5BF49CF7D049D558.idx  imstb_textedit.h.60AA91A4B4D69298.idx  imstb_truetype.h.3679222EEC045565.idx  imstb_truetype.h.380848202D224764.idx  init.c.0C858245D4306C64.idx  input.c.595173BFDB0D3140.idx  internal.h.404F67CB9E4DA2F1.idx  linux_joystick.c.9AEB4AFB5D960849.idx  linux_joystick.h.38FCDBC5E0FEF43C.idx  main.cpp.8FE81508545519CC.idx  (+31 more)
src/: main.cpp
